--- a/www.helltruth.com/index.html
+++ b/www.helltruth.com/index.html
@@ -527,7 +527,7 @@ Sys.WebForms.PageRequestManager._initialize('ScriptManager', 'Form', [], [], [],
 </div>
 <div class="t2-17"></div>
 <div class="c2-42 t2-18">A doutrina popular de um lugar de tormento sempre ardente controlado pelo diabo fez com que muitos se afastassem de Deus. Obtenha evidências bíblicas contra um inferno de sofrimento eterno... ...</div>
-<div class="c2-43"><a class="t2-19" href="free-resources/request-free-book.html" target="_self">Solicite sua cópia &amp;#187;</a></div>
+<div class="c2-43"><a class="t2-19" href="free-resources/request-free-book.html" target="_self">Solicite sua cópia &amp;</a></div>
 </div>
 <div class="b2-01"></div>
 </div>
